--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     compile 'com.jakewharton:butterknife:8.5.1'
 
+    compile 'net.cachapa.expandablelayout:expandablelayout:2.9.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
