--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,8 +21,6 @@ android {
     }
 }
 
-apply plugin: 'com.neenbedankt.android-apt'
-
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -38,11 +36,11 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:10.2.1'
     compile 'com.google.android.gms:play-services-nearby:10.2.1'
 
-    compile 'com.jakewharton:butterknife:8.0.1'
-    apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 
     provided 'com.google.auto.value:auto-value:1.2'
-    apt 'com.google.auto.value:auto-value:1.2'
+    annotationProcessor 'com.google.auto.value:auto-value:1.2'
 
     compile 'net.cachapa.expandablelayout:expandablelayout:2.9.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
