--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
+        android:name=".Alarmiko"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -95,6 +96,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="alarmiko.geoalarm.alarm.alarmiko.MapsActivity" />
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="d05b7913042ca7ed61946e8a1ec27c3bb0a00dbd" />
     </application>
 
 </manifest>
