--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ repositories {
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "alarmiko.geoalarm.alarm.alarmiko"
         minSdkVersion 19
@@ -49,20 +49,28 @@ dependencies {
         transitive = true;
     }
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.google.android.gms:play-services-awareness:11.0.4'
-    compile 'com.google.android.gms:play-services-location:11.0.4'
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
-    compile 'com.google.android.gms:play-services-ads:11.0.4'
-    compile 'com.google.android.gms:play-services-places:11.0.4'
-    compile 'com.google.android.gms:play-services-nearby:11.0.4'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+//    compile 'com.google.android.gms:play-services-awareness:11.0.4'
+//    compile 'com.google.android.gms:play-services-location:11.0.4'
+//    compile 'com.google.android.gms:play-services-maps:11.0.4'
+//    compile 'com.google.android.gms:play-services-ads:11.0.4'
+//    compile 'com.google.android.gms:play-services-places:11.0.4'
+//    compile 'com.google.android.gms:play-services-nearby:11.0.4'
+
+    compile 'com.google.android.gms:play-services-awareness:10.2.1'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+    compile 'com.google.android.gms:play-services-ads:10.2.1'
+    compile 'com.google.android.gms:play-services-places:10.2.1'
+    compile 'com.google.android.gms:play-services-nearby:10.2.1'
+
     compile 'com.jakewharton:butterknife:8.6.0'
     compile 'net.cachapa.expandablelayout:expandablelayout:2.9.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.philliphsu:bottomsheetpickers:2.3.2'
     testCompile 'junit:junit:4.12'
