--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,15 @@
                 android:value="alarmiko.geoalarm.alarm.alarmiko.MapsActivity" />
         </activity>
 
+        <activity
+            android:name=".alarms.ringtone.AlarmActivity"
+            android:excludeFromRecents="true"
+            android:label="@string/app_name"
+            android:launchMode="singleTask"
+            android:taskAffinity="alarmiko.geoalarm.alarm.alarmiko.alarms.ringtone.RingtoneActivity"
+            android:screenOrientation="nosensor">
+        </activity>
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="d05b7913042ca7ed61946e8a1ec27c3bb0a00dbd" />
@@ -105,7 +114,7 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".ErrorActivity"></activity>
+        <activity android:name=".ErrorActivity"/>
     </application>
 
 </manifest>
