--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,14 @@ repositories {
 
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key'
+            keyPassword '123qweasdzxc'
+            storeFile file("$rootDir/signkey/key.jks")
+            storePassword '123qweasdzxc'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
@@ -26,6 +34,7 @@ android {
         versionName "1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
@@ -33,34 +42,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-
-
-
-
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
-
     compile 'com.android.support:appcompat-v7:25.1.0'
-
     compile 'com.google.android.gms:play-services-awareness:10.2.1'
     compile 'com.google.android.gms:play-services-location:10.2.1'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.google.android.gms:play-services-ads:10.2.1'
     compile 'com.google.android.gms:play-services-places:10.2.1'
     compile 'com.google.android.gms:play-services-nearby:10.2.1'
-
     compile 'com.google.firebase:firebase-core:10.2.1'
     compile 'com.google.firebase:firebase-messaging:10.2.1'
-
     compile 'com.jakewharton:butterknife:8.6.0'
     compile 'net.cachapa.expandablelayout:expandablelayout:2.9.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
